examples/datalog/22_set_operations/11_union_dedup.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_union_dedup
Knowledge graph 'test_union_dedup' created.
Switched to knowledge graph: test_union_dedup
> .kg use test_union_dedup
Switched to knowledge graph: test_union_dedup
> +set_a[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'set_a'.
> +set_b[(2,), (3,), (4,)].
Inserted 3 fact(s) into 'set_b'.
> +union_ab(X) :- set_a(X).
Rule 'union_ab' registered.
> +union_ab(X) :- set_b(X).
Rule 'union_ab' registered.
> ?- union_ab(X).
4 rows:
  (1)
  (2)
  (3)
  (4)
> +count_union(<COUNT:X>) :- union_ab(X).
Script error: Parse error: Invalid term: '<COUNT:X>'
